--- a/package.json
+++ b/package.json
@@ -2,10 +2,21 @@
   "name": "intl-tel-input",
   "version": "0.1.0",
   "description": "A jQuery plugin for entering international telephone numbers",
-  "license": "BSD",
-  "author": "Jack O'Connor (jackocnr.com)",
+  "keywords": [
+    "international",
+    "i18n",
+    "country",
+    "dial",
+    "code",
+    "telephone",
+    "mobile",
+    "input",
+    "flag"
+  ],
+  "license": "MIT",
+  "author": "Jack O'Connor (http://jackocnr.com)",
   "devDependencies": {
-    "jquery": "~1.9.1",
+    "jquery": "~1.9",
     "grunt": "~0.4.1",
     "grunt-contrib-sass": "~0.3.0",
     "grunt-contrib-jshint": "~0.5.4",
