--- a/package.json
+++ b/package.json
@@ -3,26 +3,26 @@
   "version": "0.8.3",
   "description": "A jQuery plugin for entering international telephone numbers",
   "keywords": [
-      "international",
-      "i18n",
-      "country",
-      "dial",
-      "code",
-      "telephone",
-      "mobile",
-      "input",
-      "flag"
+    "international",
+    "i18n",
+    "country",
+    "dial",
+    "code",
+    "telephone",
+    "mobile",
+    "input",
+    "flag"
   ],
   "license": "MIT",
   "author": "Jack O'Connor (http://jackocnr.com)",
   "devDependencies": {
-    "jquery": "~1.9",
+    "jquery": "~1.8",
     "grunt": "~0.4.1",
     "grunt-contrib-sass": "~0.3.0",
     "grunt-contrib-jshint": "~0.5.4",
     "grunt-contrib-watch": "~0.4.4",
     "grunt-contrib-uglify": "~0.2.1",
-    "grunt-contrib-concat": "~0.3.0"
+    "grunt-contrib-jasmine": "~0.5.2"
   },
   "repository": {
     "type": "git",
