--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,8 @@
       "./build/css/intlTelInput.css"
   ],
   "dependencies": {
-    "jquery": "~1.9"
+    "jquery": "~1.8",
+    "jasmine": "~1.3",
+    "jasmine-jquery": "~1.5"
   }
 }
