--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,9 @@
       "./build/css/intlTelInput.css"
   ],
   "dependencies": {
-    "jquery": "~1.8",
+    "jquery": "~1.8"
+  },
+  "devDependencies": {
     "jasmine": "~1.3",
     "jasmine-jquery": "~1.5"
   }
