--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "grunt-contrib-jshint": "~0.5.4",
     "grunt-contrib-watch": "~0.4.4",
     "grunt-contrib-uglify": "~0.2.4",
-    "grunt-contrib-jasmine": "~0.5.2"
+    "grunt-contrib-jasmine": "~0.5.2",
+    "grunt-bower-task": "~0.3.2"
   },
   "repository": {
     "type": "git",
