--- a/bower.json
+++ b/bower.json
@@ -3,11 +3,11 @@
   "version": "0.9.13",
   "main": [
       "./build/js/intlTelInput.min.js",
-      "./build/img/flags16.png",
+      "./build/img/flags.png",
       "./build/css/intlTelInput.css"
   ],
   "dependencies": {
-    "jquery": ">= 1.8.0"
+    "jquery": "~1.8.0"
   },
   "devDependencies": {
     "jasmine": "~1.3",
