--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "grunt-contrib-watch": "~0.4.4",
     "grunt-contrib-uglify": "~0.2.4",
     "grunt-contrib-jasmine": "~0.5.2",
-    "grunt-bower-task": "~0.3.2"
+    "grunt-bower-task": "~0.3.2",
+    "grunt-templater": "0.0.4-1",
+    "load-grunt-tasks": "~0.3.0"
   },
   "repository": {
     "type": "git",
@@ -31,5 +33,8 @@
   },
   "scripts": {
     "test": "grunt travis"
+  },
+  "dependencies": {
+    "time-grunt": "~0.2.9"
   }
 }
