--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
   "devDependencies": {
     "jquery": "^1.8.0",
     "grunt": "~0.4.1",
-    "grunt-contrib-sass": "~0.3.0",
-    "grunt-contrib-jshint": "~0.5.4",
-    "grunt-contrib-watch": "~0.4.4",
-    "grunt-contrib-uglify": "~0.2.4",
-    "grunt-contrib-jasmine": "~0.5.2",
-    "grunt-bower-task": "~0.3.2",
-    "grunt-templater": "0.0.4-1",
+    "grunt-contrib-sass": "~0.7.2",
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-uglify": "~0.3.2",
+    "grunt-contrib-jasmine": "~0.6.1",
+    "bower": "~1.2.8",
+    "grunt-templater": "0.0.4",
     "load-grunt-tasks": "~0.3.0",
     "time-grunt": "~0.2.9",
     "ejs": "~0.8.5"
