--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
       "./build/css/intlTelInput.css"
   ],
   "dependencies": {
-    "jquery": "^1.8.0"
+    "jquery": "~1"
   },
   "devDependencies": {
     "jasmine-jquery": "~2.0.2"
