--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-jasmine": "~0.6.1",
     "grunt-templater": "0.0.4",
-    "load-grunt-tasks": "~0.4.0",
+    "load-grunt-config": "~0.7.2",
     "time-grunt": "~0.2.9",
     "ejs": "~0.8.5",
     "grunt-bower-task": "~0.3.4",
