--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-contrib-sass": "~0.8.1",
     "grunt-contrib-uglify": "~0.6.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-replace": "^0.8.0",
     "grunt-shell": "^1.1.1",
     "grunt-templater": "0.0.6",
     "jquery": ">=1.7",
