--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "jquery": ">=1.7"
   },
   "devDependencies": {
-    "jasmine-jquery": "~2.0.2"
+    "jasmine-jquery": "~2.0.2",
+    "flag-icon-css": "~0.6.4"
   }
 }
