--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "grunt-replace": "^0.8.0",
     "grunt-shell": "^1.1.1",
     "grunt-svg-sprite": "^1.0.16",
+    "grunt-svg2png": "^0.2.5",
     "grunt-templater": "0.0.6",
     "jquery": ">=1.7",
     "load-grunt-config": "~0.13.1",
