--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "grunt-replace": "^0.8.0",
     "grunt-retinafy": "^0.1.5",
     "grunt-shell": "^1.1.1",
-    "grunt-svg-sprite": "^1.0.16",
-    "grunt-svg2png": "^0.2.5",
+    "grunt-spritesmith": "^4.1.0",
     "grunt-templater": "0.0.6",
     "jquery": ">=1.7",
     "load-grunt-config": "~0.13.1",
