--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-contrib-uglify": "~0.6.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-replace": "^0.8.0",
+    "grunt-responsive-images": "^0.1.6",
     "grunt-retinafy": "^0.1.5",
     "grunt-shell": "^1.1.1",
     "grunt-spritesmith": "^4.1.0",
