--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-contrib-sass": "~0.8.1",
     "grunt-contrib-uglify": "~0.6.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-exec": "^0.4.6",
     "grunt-replace": "^0.8.0",
     "grunt-responsive-images": "^0.1.6",
     "grunt-retinafy": "^0.1.5",
