--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "grunt-shell": "^1.1.1",
     "grunt-spritesmith": "^4.1.0",
     "grunt-templater": "0.0.6",
+    "jasmine-jquery": "~2.0.2",
     "jquery": ">=1.7",
     "load-grunt-config": "~0.13.1",
-    "time-grunt": "~1.0.0",
-    "jasmine-jquery": "~2.0.2",
-    "region-flags": "behdad/region-flags#gh-pages"
+    "region-flags": "git://github.com/behdad/region-flags#gh-pages",
+    "time-grunt": "~1.0.0"
   },
   "repository": {
     "type": "git",
