[feat] CMV-69: Update plugin

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "author": "Jack O'Connor (http://jackocnr.com)",
   "dependencies": {
+    "evenizer": "^0.1.17",
     "jquery": ">=1.7"
   },
   "devDependencies": {
