--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "~1.0.0",
     "grunt": "~0.4.5",
     "grunt-bump": "0.0.15",
+    "grunt-contrib-imagemin": "^1.0.0",
     "grunt-contrib-jasmine": "^1.0.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-sass": "~0.9.2",
