--- a/package.json
+++ b/package.json
@@ -21,24 +21,24 @@
   "devDependencies": {
     "ejs": "~1.0.0",
     "grunt": "~0.4.5",
-    "grunt-bump": "0.0.15",
-    "grunt-contrib-imagemin": "^1.0.0",
-    "grunt-contrib-jasmine": "^1.0.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-sass": "~0.9.2",
-    "grunt-contrib-uglify": "~0.6.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-exec": "^0.4.6",
-    "grunt-replace": "^0.11.0",
-    "grunt-responsive-images": "^0.1.7",
-    "grunt-shell": "^1.1.1",
-    "grunt-spritesmith": "^4.1.0",
+    "grunt-bump": "^0.7.2",
+    "grunt-contrib-imagemin": "^1.0.1",
+    "grunt-contrib-jasmine": "^1.0.3",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^2.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-exec": "^1.0.1",
+    "grunt-replace": "^1.0.1",
+    "grunt-responsive-images": "^0.1.9",
+    "grunt-shell": "^1.3.1",
+    "grunt-spritesmith": "^6.3.1",
     "grunt-templater": "0.0.6",
-    "jasmine-jquery": "~2.0.2",
-    "jquery": ">=1.7",
-    "load-grunt-config": "~0.13.1",
-    "region-flags": "1.0.1",
-    "time-grunt": "~1.0.0"
+    "jasmine-jquery": "^2.1.1",
+    "jquery": "^3.1.1",
+    "load-grunt-config": "^0.19.2",
+    "region-flags": "^1.0.1",
+    "time-grunt": "^1.4.0"
   },
   "repository": {
     "type": "git",
