--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "jquery": ">=1.7"
   },
   "devDependencies": {
-    "ejs": "~1.0.0",
-    "grunt": "~0.4.5",
-    "grunt-bump": "^0.7.2",
+    "grunt": "^1.0.1",
+    "grunt-bump": "^0.8.0",
     "grunt-contrib-imagemin": "^1.0.1",
     "grunt-contrib-jasmine": "^1.0.3",
     "grunt-contrib-jshint": "^1.0.0",
@@ -33,7 +32,7 @@
     "grunt-responsive-images": "^0.1.9",
     "grunt-shell": "^1.3.1",
     "grunt-spritesmith": "^6.3.1",
-    "grunt-templater": "0.0.6",
+    "grunt-template": "^1.0.0",
     "jasmine-jquery": "^2.1.1",
     "jquery": "^3.1.1",
     "load-grunt-config": "^0.19.2",
