--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jasmine-jquery": "^2.1.1",
     "jquery": "^3.1.1",
     "load-grunt-config": "^0.19.2",
+    "lodash": "^4.16.6",
     "region-flags": "^1.0.1",
     "time-grunt": "^1.4.0"
   },
