Modifications asked by owner by comments on my first pull request : https://github.com/jackocnr/intl-tel-input/pull/523#issuecomment-271425814

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,5 @@
 {
-  "name": "defro/intl-tel-input",
-  "version": "10.0.2",
+  "name": "jackocnr/intl-tel-input",
   "description": "A jQuery plugin for entering international telephone numbers",
   "keywords": [
     "international",
@@ -15,5 +14,15 @@
     "input",
     "flag"
   ],
-  "license": "MIT"
+  "homepage": "https://github.com/jackocnr/intl-tel-input",
+  "type": "library",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Jack O'Connor",
+      "homepage": "http://jackocnr.com"
+    }
+  ],
+  "minimum-stability": "stable",
+  "prefer-stable": true
 }
