--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "url": "https://github.com/jackocnr/intl-tel-input.git"
   },
   "scripts": {
-    "test": "grunt travis"
+    "test": "grunt travis",
+    "build": "grunt build"
   }
 }
