--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "grunt-contrib-imagemin": "^1.0.1",
     "grunt-contrib-jasmine": "^1.0.3",
     "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-exec": "^1.0.1",
     "grunt-replace": "^1.0.1",
     "grunt-responsive-images": "^0.1.9",
+    "grunt-sass": "^2.0.0",
     "grunt-shell": "^1.3.1",
     "grunt-spritesmith": "^6.3.1",
     "grunt-template": "^1.0.0",
@@ -47,7 +47,8 @@
     "test": "grunt travis",
     "build": "grunt build",
     "build:js": "grunt js",
-    "build:css": "grunt sass",
-    "build:img": "grunt img"
+    "build:css": "grunt css",
+    "build:img": "grunt img",
+    "watch": "grunt watch"
   }
 }
