--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt": "^1.0.1",
     "grunt-bump": "^0.8.0",
     "grunt-cli": "^1.2.0",
+    "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-imagemin": "^1.0.1",
     "grunt-contrib-jasmine": "^1.1.0",
     "grunt-contrib-jshint": "^1.1.0",
