Remove jquery from demo and update package files

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "jackocnr/intl-tel-input",
   "version": "13.0.4",
-  "description": "A jQuery plugin for entering international telephone numbers",
+  "description": "A JavaScript plugin for entering and validating international telephone numbers",
   "keywords": [
     "international",
     "i18n",
