--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
   "license": "MIT",
   "author": "Jack O'Connor (http://jackocnr.com)",
   "devDependencies": {
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "babel-eslint": "^9.0.0",
     "custom-event-polyfill": "^1.0.6",
     "es6-promise": "^4.2.5",
     "evenizer": "^0.1.17",
     "grunt": "^1.0.1",
+    "grunt-babel": "^8.0.0",
     "grunt-bump": "^0.8.0",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-cssmin": "^2.2.1",
