Switch from jshint to eslint

--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-imagemin": "^1.0.1",
     "grunt-contrib-jasmine": "^2.0.2",
-    "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-uglify": "^2.1.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-eslint": "^21.0.0",
     "grunt-exec": "^1.0.1",
     "grunt-replace": "^1.0.1",
     "grunt-responsive-images": "^1.10.1",
