--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "babel-eslint": "^9.0.0",
     "custom-event-polyfill": "^1.0.6",
     "es6-promise": "^4.2.5",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
     "evenizer": "^0.1.17",
     "grunt": "^1.0.1",
     "grunt-babel": "^8.0.0",
