--- a/package.json
+++ b/package.json
@@ -40,13 +40,14 @@
     "grunt-exec": "^1.0.1",
     "grunt-replace": "^1.0.1",
     "grunt-responsive-images": "^1.10.1",
-    "grunt-sass": "^2.0.0",
+    "grunt-sass": "^3.0.0",
     "grunt-shell": "^2.1.0",
     "grunt-spritesmith": "^6.6.2",
     "grunt-template": "^1.0.0",
     "jasmine-jquery": "^2.1.1",
     "jquery": "^3.1.1",
     "load-grunt-config": "^0.19.2",
+    "node-sass": "^4.12.0",
     "region-flags": "^1.1.0",
     "time-grunt": "^1.4.0"
   },
