--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "custom-event-polyfill": "^1.0.6",
     "es6-promise": "^4.2.5",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
