--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "jquery": "^3.1.1",
     "load-grunt-config": "^0.19.2",
     "prettier": "^2.8.7",
-    "region-flags": "^1.1.0",
+    "region-flags": "https://github.com/fonttools/region-flags/archive/refs/tags/1.2.1.tar.gz",
     "sass": "^1.62.0",
     "time-grunt": "^1.4.0"
   },
