--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "build:css": "grunt css",
     "build:img": "grunt img",
     "watch": "grunt watch",
-    "build:react:demo": "esbuild react/demo/DemoApp.js --bundle --outfile=react/demo/demo-bundle.js --loader:.js=jsx --format=cjs",
+    "build:react:demo": "esbuild react/demo/SimpleApp.js --bundle --outfile=react/demo/simple-bundle.js --loader:.js=jsx --format=cjs && esbuild react/demo/ValidationApp.js --bundle --outfile=react/demo/validation-bundle.js --loader:.js=jsx --format=cjs",
     "build:react:component": "node react/build.js"
   },
   "style": "build/css/intlTelInput.css",
