Babel: target modern browsers to reduce filesize

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-imagemin": "^4.0.0",
     "grunt-contrib-jasmine": "^3.0.0",
-    "grunt-contrib-uglify": "^2.1.0",
+    "grunt-contrib-uglify": "^5.2.2",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-eslint": "^21.0.0",
     "grunt-exec": "^1.0.1",
@@ -59,21 +59,21 @@
     "jquery": "^3.1.1",
     "load-grunt-config": "^0.19.2",
     "prettier": "^2.8.7",
-    "region-flags": "https://github.com/fonttools/region-flags/archive/refs/tags/1.2.1.tar.gz",
-    "sass": "^1.62.0",
-    "time-grunt": "^1.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "region-flags": "https://github.com/fonttools/region-flags/archive/refs/tags/1.2.1.tar.gz",
+    "sass": "^1.62.0",
+    "time-grunt": "^1.4.0"
   },
   "files": [
-	  "build/*",
-	  "react/build/*",
-	  "CHANGELOG.md",
-	  "LICENSE",
-	  "package.json",
-	  "package-lock.json",
-	  "README.md",
+    "build/*",
+    "react/build/*",
+    "CHANGELOG.md",
+    "LICENSE",
+    "package.json",
+    "package-lock.json",
+    "README.md",
     "index.js"
   ],
   "repository": {
