--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "editor.formatOnPaste": false, // required 
     "editor.formatOnType": false, // required
     "editor.formatOnSaveMode": "file", // required to format on save
-    "vs-code-prettier-eslint.prettierLast": "false" // set as "true" to run 'prettier' last not first
+    "vs-code-prettier-eslint.prettierLast": "false",
+    "typescript.tsdk": "node_modules/typescript/lib" // set as "true" to run 'prettier' last not first
 }
