--- a/package.json
+++ b/package.json
@@ -89,7 +89,9 @@
   "style": "build/css/intlTelInput.css",
   "exports": {
     ".": "./build/js/intlTelInput.js",
+    "./data": "./build/js/data.js",
     "./react": "./react/build/IntlTelInput.js",
     "./*": "./*"
-  }
+  },
+  "types": "./types.d.ts"
 }
