--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -1,12 +1,13 @@
 {
     "compilerOptions": {
+        "jsx": "react",
         "esModuleInterop": true, // required for react (etc) default imports
         "declaration": true, // generate .d.ts files
         "emitDeclarationOnly": true, // ONLY generate .d.ts files (we use esbuild for the actual bundling)
-        "outFile": "build/js/types.d.ts",
-        "rootDir": "./src/js",
+        "outFile": "build/types.d.ts",
+        "rootDir": "./src",
     },
     "include": [
-        "src/js/intl-tel-input.ts",
+        "src/intl-tel-input/react.tsx",
     ],
 }
