--- a/package.json
+++ b/package.json
@@ -24,40 +24,42 @@
   "license": "MIT",
   "author": "Jack O'Connor (http://jackocnr.com)",
   "devDependencies": {
-    "@types/react": "^18.2.73",
-    "@types/react-dom": "^18.2.23",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
-    "esbuild": "^0.19.11",
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.24",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
+    "esbuild": "^0.20.2",
     "eslint": "^8.57.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jasmine": "^4.1.3",
     "eslint-plugin-react": "^7.34.1",
     "evenizer": "^0.1.17",
-    "google-closure-compiler": "^20230411.0.0",
-    "google-closure-library": "^20230411.0.0",
+    "google-closure-compiler": "^20240317.0.0",
+    "google-closure-library": "^20230802.0.0",
     "grunt": "^1.6.1",
     "grunt-bump": "^0.8.0",
     "grunt-cli": "^1.2.0",
-    "grunt-contrib-cssmin": "^2.2.1",
+    "grunt-contrib-cssmin": "^5.0.0",
     "grunt-contrib-imagemin": "^4.0.0",
     "grunt-contrib-jasmine": "^4.0.0",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-exec": "^1.0.1",
-    "grunt-replace": "^1.0.1",
+    "grunt-exec": "^3.0.0",
+    "grunt-replace": "^2.0.2",
     "grunt-responsive-images": "^1.10.1",
     "grunt-sass": "^3.0.0",
     "grunt-shell": "^4.0.0",
     "grunt-spritesmith": "^6.10.0",
+    "image-size": "^1.1.1",
     "jasmine-jquery": "^2.1.1",
     "jquery": "^3.1.1",
-    "load-grunt-config": "^0.19.2",
-    "prettier": "^2.8.7",
+    "load-grunt-config": "^4.0.1",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "region-flags": "https://github.com/fonttools/region-flags/archive/refs/tags/1.2.1.tar.gz",
-    "sass": "^1.62.0",
-    "time-grunt": "^1.4.0",
+    "sass": "^1.74.1",
+    "time-grunt": "^2.0.0",
     "typescript": "^5.4.3"
   },
   "files": [
