--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -1,13 +1,13 @@
 {
-    "compilerOptions": {
-        "jsx": "react",
-        "esModuleInterop": true, // required for react (etc) default imports
-        "declaration": true, // generate .d.ts files
-        "emitDeclarationOnly": true, // ONLY generate .d.ts files (we use esbuild for the actual bundling)
-        "outFile": "build/IntlTelInput.d.ts",
-        "rootDir": "./src",
-    },
-    "include": [
-        "src/intl-tel-input/react.tsx",
-    ],
+  "compilerOptions": {
+    "jsx": "react",
+    "esModuleInterop": true, //* Required for react (etc) default imports.
+    "declaration": true, //* Generate .d.ts files.
+    "emitDeclarationOnly": true, //* ONLY generate .d.ts files (we use esbuild for the actual bundling).
+    "outFile": "build/IntlTelInput.d.ts",
+    "rootDir": "./src",
+  },
+  "include": [
+    "src/intl-tel-input/react.tsx",
+  ],
 }
