--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -4,7 +4,7 @@
         "esModuleInterop": true, // required for react (etc) default imports
         "declaration": true, // generate .d.ts files
         "emitDeclarationOnly": true, // ONLY generate .d.ts files (we use esbuild for the actual bundling)
-        "outFile": "build/types.d.ts",
+        "outFile": "build/IntlTelInput.d.ts",
         "rootDir": "./src",
     },
     "include": [
