--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "esModuleInterop": true, // required for react (etc) default imports
         "declaration": true, // generate .d.ts files
         "emitDeclarationOnly": true, // ONLY generate .d.ts files (we use esbuild for the actual bundling)
-        "outFile": "build/js/types.d.ts",
+        "outFile": "build/js/intlTelInput.d.ts",
         "rootDir": "./src/js",
     },
     "include": [
