fix: Add missing type definition. Allows to autoconfigure typescript compiler

--- a/package.json
+++ b/package.json
@@ -91,5 +91,6 @@
     "./data": "./build/js/data.js",
     "./react": "./react/build/IntlTelInput.js",
     "./*": "./*"
-  }
+  },
+  "types": "./build/js/intlTelInput.d.ts"
 }
