--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,16 @@
 language: node_js
 node_js:
   - 20
-install: npm install
+
+dist: jammy
+
+cache:
+  npm: true
+  directories:
+    - node_modules
+
+install:
+  - npm install
+
+script:
+  - npm test
