Installs a spelling linter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,40 +5,6 @@
     "editor.formatOnSaveMode": "file", //* required to format on save
     "vs-code-prettier-eslint.prettierLast": false, //* set as "true" to run 'prettier' last not first
     "typescript.tsdk": "node_modules/typescript/lib",
-    "cSpell.enabledLanguageIds": [
-      "css",
-      "en",
-      "html",
-      "ignore",
-      "javascript",
-      "javascriptreact",
-      "json",
-      "jsonc",
-      "markdown",
-      "plaintext",
-      "scss",
-      "text",
-      "typescript",
-      "typescriptreact",
-      "COBOL",
-      "ACUCOBOL"
-    ],
-    "cSpell.words": [
-      "AYTF",
-      "dropup",
-      "evenizer",
-      "FAYT",
-      "geoip",
-      "iife",
-      "ipapi",
-      "jackocnr",
-      "librsvg",
-      "mledoze's",
-      "NANP",
-      "normalised",
-      "optipng",
-      "tmpl"
-    ],
     "files.associations": {
       "LICENSE": "text",
     },
@@ -50,5 +16,41 @@
       "ol-prefix": false,
       "no-inline-html": false,
     },
-    "cSpell.language": "en-GB"
+    "cSpell.language": "en-GB",
+    "cSpell.enabledLanguageIds": [
+      "asciidoc",
+      "c",
+      "cpp",
+      "csharp",
+      "css",
+      "dotenv",
+      "go",
+      "handlebars",
+      "html",
+      "ignore",
+      "jade",
+      "java",
+      "javascript",
+      "javascriptreact",
+      "json",
+      "jsonc",
+      "latex",
+      "less",
+      "markdown",
+      "php",
+      "plaintext",
+      "pug",
+      "python",
+      "restructuredtext",
+      "rust",
+      "scala",
+      "scss",
+      "text",
+      "typescript",
+      "typescriptreact",
+      "yaml",
+      "yml",
+      "COBOL",
+      "ACUCOBOL"
+    ]
 }
