Revert "Fixes Travis config"
This reverts commit 8d7ccb218012bd57cbb6960ee1a524fcd32c085a.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,4 @@
 language: node_js
 node_js:
   - 20
-
-dist: jammy
-
-cache:
-  npm: true
-  directories:
-    - node_modules
-
-install:
-  - npm install
-
-script:
-  - npm test
+install: npm install
