Comment out travis caching

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ node_js:
 
 dist: jammy
 
-cache:
-  npm: true
-  directories:
-    - node_modules
+# cache:
+#   npm: true
+#   directories:
+#     - node_modules
 
 install:
   - npm install
