--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
       "require": "./react/build/IntlTelInput.cjs",
       "default": "./react/build/IntlTelInput.js"
     },
+    "./i18n/*": "./build/i18n/*",
     "./*": "./*"
   },
   "typesVersions": {
